--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,17 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^3.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^8.10.1",
+    "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "styled-components": "^5.3.6",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -40,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
