--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^17.0.2",
+    "react-native": "^0.68.5",
+    "react-native-web": "^0.18.10",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
