--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "fs": "*",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.0",
     "nodemailer": "^6.6.0",
     "pdfmake": "^0.1.71"
   }
