--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-native-web": "^0.18.10",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "reactstrap": "^8.10.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
