--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^3.4.1",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^0.32.4",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-native": "^0.68.5",
     "react-native-web": "^0.18.10",
