--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-session": "^1.17.3",
     "fs": "*",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
